--- a/cyber.css
+++ b/cyber.css
@@ -30,10 +30,12 @@ button {
     background-color: goldenrod;
     padding: 5px;
     transition-duration: 0.3s;
+    box-shadow: 2px 2px 3px 0px darkgoldenrod;
 }
 
 button:hover {
     background-color: darkgoldenrod;
+    box-shadow: 4px 5px 4px 0px goldenrod;
 }
 
 a {
